--- a/workshopwebapp/Views/Home/Contact.cshtml
+++ b/workshopwebapp/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Microsoft Colombia Cll 92 #11 <br />
+    Bogotá, Colombia<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    313 4898493
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong> <a href="mailto:juanh@microsoftswat.com">juanh@microsoftswat.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:juanh@microsoftswat.com">juanh@microsoftswat.com</a>
 </address>
